2006-08-16  Mark D. Baushke  <mdb@gnu.org>

	* getdate.texi: Update from GNULIB.
	* Makefile.in, stamp-vti, version.texi: Regenrated.

2006-08-14  Derek Price  <derek@ximbiot.com>

	* cvs.texinfo (loginfo): s/%t/%T/, in summary (desc text was correct).

2006-08-12  Mark D. Baushke  <mdb@gnu.org>

	* stamp-1, stamp-vti, version-client.texi, version.texi:
	Regenerated.

2006-08-11  Mark D. Baushke  <mdb@gnu.org>

	* doc/cvs.texinfo, doc/cvsclient.texi: Fix some typos.
	(patch from Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>)

2006-07-16  Derek Price  <derek@ximbiot.com>

	* cvs.texinfo (File permissions): Correct punctuation.

2006-07-11  Larry Jones  <lawrence.jones@ugs.com>

	* cvs.texinfo (log options): -b is a revision selection option, not
	a header field option.

2006-06-26  Derek Price  <derek@ximbiot.com>

	* cvs.texinfo (Adding files): Correct spelling (from wiki.)
	(Informing others): Remove cross-reference to the modules node.

2006-06-22  Larry Jones  <lawrence.jones@ugs.com>

	* cvs.texinfo (user-defined logging, Informing others): Remove
	references to the obsolete -i module option.

2006-06-09  Mark D. Baushke  <mdb@gnu.org>

	* cvs.texinfo (config): Add the new 'X' record type for the
	LogHistory option.
	(history options): Descripe the 'X' record type.
	* version.texi: Regenerated.

2006-06-08  Derek Price  <derek@ximbiot.com>

	* cvs.texinfo (OpenPGP Signed Commits): New node.
	(Global options, The connection method): Reference new node.

2006-06-08  Derek Price  <derek@ximbiot.com>

	* cvsclient.texi (Requests): Add Empty-conflicts.

2006-05-20  Derek Price  <derek@ximbiot.com>

	* cvs.texinfo (CVS commands): Correct tag & rtag description.
	(rdiff): Use {} for required alternates instead of ().  Clarify.
	(rdiff options): Remove reference to -V.
	(tag & rtag): Rev/date argument to rtag isn't required.  Other minor
	updates.

2006-05-19  Derek Price  <derek@ximbiot.com>

	* cvs.texinfo (log): Rename to...