@@ -237,7 +237,7 @@ left of \fBcvs_command\fR) are:
 May be invoked multiple times to specify one legal \fBcvsroot\fR directory with
 each invocation.  Also causes CVS to preparse the configuration file for each
 specified root, which can be useful when configuring write proxies,  See
-see node `Password authentication server\(aq in the CVS manual & see node `Write proxies\(aq in the CVS manual.
+`Password authentication server\(aq in the CVS manual & `Write proxies\(aq in the CVS manual.
 .SP
 .IX "Authentication, stream"
 .IX "Stream authentication"
@@ -314,7 +314,7 @@ the \fB$CVSROOT\fR environment variable.  see node `Repository\(aq in the CVS ma
 Use \fIeditor\fR to enter revision log information.  Overrides the
 setting of the \fB$CVSEDITOR\fR and \fB$EDITOR\fR
 environment variables.  For more information, see
-see node `Committing your changes\(aq in the CVS manual.
+`Committing your changes\(aq in the CVS manual.
 .SP
 .IP "" 0
 \fB-f\fR
@@ -499,7 +499,7 @@ when the server supports it.  Overrides the \fB$CVS_SIGN_COMMITS\fR
 environment variable (see node `Environment variables\(aq in the CVS manual) and the \fBsign\fR and
 \fBno-sign\fR method options (see node `The connection method\(aq in the CVS manual).
 .SP
-\fBWARNING: see node `OpenPGP Signed Commits\(aq in the CVS manual for more on using OpenPGP
+\fBWARNING: `OpenPGP Signed Commits\(aq in the CVS manual for more on using OpenPGP
 signatures securely.\fR
 .SP
 .IP "" 0
@@ -529,7 +529,7 @@ Substitute the name of the file to generate a signature for.
 This template should send the generated signature to its standard output.
 Overrides the \fBsign-template\fR method option and defaults to something like
 \fB/usr/bin/gpg --detach-sign --output - %M %@ %s\fR.
-\fBWARNING: see node `OpenPGP Signed Commits\(aq in the CVS manual for more on using OpenPGP
+\fBWARNING: `OpenPGP Signed Commits\(aq in the CVS manual for more on using OpenPGP
 signatures securely.\fR
 .SP
 .IP "" 0
@@ -539,7 +539,7 @@ The value passed to both in place of \fB%M\fR in both the OpenPGP signature
 and the OpenPGP verification command line templates.  Defaults to
 \fB--textmode\fR.
 .SP
-\fBWARNING: see node `OpenPGP Signed Commits\(aq in the CVS manual for more on using OpenPGP
+\fBWARNING: `OpenPGP Signed Commits\(aq in the CVS manual for more on using OpenPGP
 signatures securely.\fR
 .SP
 .IP "" 0
@@ -558,7 +558,7 @@ of \fBfatal\fR will disallow the entire checkout.  Overrides the
 variables\(aq in the CVS manual) and the \fBverify\fR and \fBno-verify\fR method options
 (see node `The connection method\(aq in the CVS manual).
 .SP
-\fBWARNING: see node `OpenPGP Signed Commits\(aq in the CVS manual for more on using OpenPGP
+\fBWARNING: `OpenPGP Signed Commits\(aq in the CVS manual for more on using OpenPGP
 signatures securely.\fR
 .SP
 .IP "" 0
@@ -596,7 +596,7 @@ for the signed file and a non-zero exit code otherwise.  Overrides the
 variables\(aq in the CVS manual) and the \fBverify-template\fR method option (see node `The connection
 method\(aq in the CVS manual and defaults to something like
 \fB/usr/bin/gpg --detach-sign --output - %M %@ %S %s\fR.
-\fBWARNING: see node `OpenPGP Signed Commits\(aq in the CVS manual for more on using OpenPGP
+\fBWARNING: `OpenPGP Signed Commits\(aq in the CVS manual for more on using OpenPGP
 signatures securely.\fR
 .SP
 .SH "Common options"
@@ -642,7 +642,7 @@ further updates in the same directory will use the same date
 slightly different way; see node `history options\(aq in the CVS manual).
 .SP
 For a complete description of the date formats accepted by \fBcvs\fR,
-see node `Date input formats\(aq in the CVS manual.
+`Date input formats\(aq in the CVS manual.
 .SP
 Remember to quote the argument to the \fB-D\fR
 flag so that your shell doesn\(aqt interpret spaces as
@@ -680,8 +680,8 @@ give an error if you mistype a tag name.
 \fBWARNING:  The \fBcommit\fB and \fBremove\fB
 commands also have a
 \fB-f\fB option, but it has a different behavior for
-those commands.  See see node `commit options\(aq in the CVS manual, and
-see node `Removing files\(aq in the CVS manual.\fR
+those commands.  See `commit options\(aq in the CVS manual, and
+`Removing files\(aq in the CVS manual.\fR
 .SP
 .IP "" 0
 \fB-k \fIkflag\fB\fR
@@ -744,7 +744,7 @@ and \fBrtag\fR commands.
 .IP "" 0
 \fB-P\fR
 .IP "" 2
-Prune empty directories.  See see node `Removing directories\(aq in the CVS manual.
+Prune empty directories.  See `Removing directories\(aq in the CVS manual.
 .SP
 .IP "" 0
 \fB-p\fR
@@ -788,8 +788,8 @@ future update commands, until you specify otherwise (for more information
 on sticky tags/dates, see node `Sticky tags\(aq in the CVS manual).
 .SP
 The tag can be either a symbolic or numeric tag, as
-described in see node `Tags\(aq in the CVS manual, or the name of a branch, as
-described in see node `Branching and merging\(aq in the CVS manual.
+described in `Tags\(aq in the CVS manual, or the name of a branch, as
+described in `Branching and merging\(aq in the CVS manual.
 When \fItag\fR is the name of a
 branch, some commands accept the optional \fIdate\fR argument to specify
 the revision as of the given date on the branch.
@@ -850,7 +850,7 @@ commands, except for those specified using the
 \fBUserAdminOptions\fR configuration option in the
 \fBCVSROOT/config\fR file.  Options specified using
 \fBUserAdminOptions\fR can be run by any user.  See
-see node `config\(aq in the CVS manual for more on \fBUserAdminOptions\fR.
+`config\(aq in the CVS manual for more on \fBUserAdminOptions\fR.
 .SP
 The \fBcvsadmin\fR group should exist on the server,
 or any system running the non-client/server \fBcvs\fR.
@@ -978,7 +978,7 @@ Replace the log message of revision \fIrev\fR with
 .IP "" 2
 Act like \fB-n\fR, except override any previous
 assignment of \fIname\fR.  For use with magic branches,
-see see node `Magic branch numbers\(aq in the CVS manual.
+see `Magic branch numbers\(aq in the CVS manual.
 .SP
 .IP "" 0
 \fB-n\fIname\fB[:[\fIrev\fB]]\fR
@@ -1282,7 +1282,7 @@ Annotate binary files.
 .IP "" 2
 Annotate file as of specified revision/tag or, when \fIdate\fR is specified
 and \fItag\fR is a branch tag, the version from the branch \fItag\fR as it
-existed on \fIdate\fR.  See see node `Common options\(aq in the CVS manual.
+existed on \fIdate\fR.  See `Common options\(aq in the CVS manual.
 .SP
 .IP "" 0
 \fB-D \fIdate\fB\fR
@@ -1327,9 +1327,9 @@ or replaced; you need to use \fBcvs diff\fR for that
 (see node `diff\(aq in the CVS manual).
 .SP
 The options to \fBcvs annotate\fR are listed in
-see node `Invoking CVS\(aq in the CVS manual, and can be used to select the files
+`Invoking CVS\(aq in the CVS manual, and can be used to select the files
 and revisions to annotate.  The options are described
-in more detail there and in see node `Common options\(aq in the CVS manual.
+in more detail there and in `Common options\(aq in the CVS manual.
 .SP
 .SH "checkout"
 .SS "Check out sources for editing"
@@ -1401,7 +1401,7 @@ forget to change your directory to the top level
 directory.
 .SP
 For the output produced by the \fBcheckout\fR command
-see see node `update output\(aq in the CVS manual.
+see `update output\(aq in the CVS manual.
 .SP
 .SH "checkout options"
 .SP
@@ -1414,7 +1414,7 @@ them):
 .IP "" 2
 Use the most recent revision no later than \fIdate\fR.
 This option is sticky, and implies \fB-P\fR.  See
-see node `Sticky tags\(aq in the CVS manual, for more information on sticky tags/dates.
+`Sticky tags\(aq in the CVS manual, for more information on sticky tags/dates.
 .SP
 .IP "" 0
 \fB-f\fR
@@ -1426,11 +1426,11 @@ found, retrieve the most recent revision (instead of ignoring the file).
 \fB-k \fIkflag\fB\fR
 .IP "" 2
 Process keywords according to \fIkflag\fR.  See
-see node `Keyword substitution\(aq in the CVS manual.
+`Keyword substitution\(aq in the CVS manual.
 This option is sticky; future updates of
 this file in this working directory will use the same
 \fIkflag\fR.  The \fBstatus\fR command can be viewed
-to see the sticky options.  See see node `Invoking CVS\(aq in the CVS manual, for
+to see the sticky options.  See `Invoking CVS\(aq in the CVS manual, for
 more information on the \fBstatus\fR command.
 .SP
 .IP "" 0
@@ -1448,7 +1448,7 @@ see node `modules\(aq in the CVS manual).
 .IP "" 0
 \fB-P\fR
 .IP "" 2
-Prune empty directories.  See see node `Moving directories\(aq in the CVS manual.
+Prune empty directories.  See `Moving directories\(aq in the CVS manual.
 .SP
 .IP "" 0
 \fB-p\fR
@@ -1466,8 +1466,8 @@ Checkout directories recursively.  This option is on by default.
 Checkout the revision specified by \fItag\fR or, when \fIdate\fR is specified
 and \fItag\fR is a branch tag, the version from the branch \fItag\fR as it
 existed on \fIdate\fR.  This option is sticky, and implies \fB-P\fR.
-See see node `Sticky tags\(aq in the CVS manual, for more information on sticky tags/dates.  Also,
-see see node `Common options\(aq in the CVS manual.
+See `Sticky tags\(aq in the CVS manual, for more information on sticky tags/dates.  Also,
+see `Common options\(aq in the CVS manual.
 .SP
 In addition to those, you can use these special command
 options with \fBcheckout\fR:
@@ -1477,7 +1477,7 @@ options with \fBcheckout\fR:
 .IP "" 2
 Reset any sticky tags, dates, or \fB-k\fR options.
 Does not reset sticky \fB-k\fR options on modified files.
-See see node `Sticky tags\(aq in the CVS manual, for more information on sticky tags/dates.
+See `Sticky tags\(aq in the CVS manual, for more information on sticky tags/dates.
 .SP
 .IP "" 0
 \fB-c\fR
@@ -1625,7 +1625,7 @@ enter a log message that will be written to one or more
 logging programs (see node `modules\(aq in the CVS manual, and see node `loginfo\(aq in the CVS manual)
 and placed in the \fBrcs\fR file inside the
 repository.  This log message can be retrieved with the
-\fBlog\fR command; see see node `log & rlog\(aq in the CVS manual.  You can specify the
+\fBlog\fR command; see `log & rlog\(aq in the CVS manual.  You can specify the
 log message on the command line with the \fB-m
 \fImessage\fB\fR option, and thus avoid the editor invocation,
 or use the \fB-F \fIfile\fB\fR option to specify
@@ -1634,8 +1634,8 @@ that the argument file contains the log message.
 At \fBcommit\fR, a unique commitid is placed in the \fBrcs\fR
 file inside the repository. All files committed at once
 get the same commitid. The commitid can be retrieved with
-the \fBlog\fR and \fBstatus\fR command; see see node `log & rlog\(aq in the CVS manual,
-see node `File status\(aq in the CVS manual.
+the \fBlog\fR and \fBstatus\fR command; see `log & rlog\(aq in the CVS manual,
+`File status\(aq in the CVS manual.
 .SP
 .SH "commit options"
 .SP
@@ -1685,7 +1685,7 @@ of invoking an editor.
 \fB-f\fR
 .IP "" 2
 Note that this is not the standard behavior of
-the \fB-f\fR option as defined in see node `Common options\(aq in the CVS manual.
+the \fB-f\fR option as defined in `Common options\(aq in the CVS manual.
 .SP
 Force \fBcvs\fR to commit a new revision even if you haven\(aqt
 made any changes to the file.  As of \fBcvs\fR version 1.12.10,
@@ -1834,7 +1834,7 @@ compared.  If any directories are given, all files
 under them will be compared.
 .SP
 The exit status for diff is different than for other
-\fBcvs\fR commands; for details see node `Exit status\(aq in the CVS manual.
+\fBcvs\fR commands; for details `Exit status\(aq in the CVS manual.
 .SP
 .SH "diff options"
 .SP
@@ -1852,7 +1852,7 @@ See \fB-r\fR for how this affects the comparison.
 \fB-k \fIkflag\fB\fR
 .IP "" 2
 Process keywords according to \fIkflag\fR.  See
-see node `Keyword substitution\(aq in the CVS manual.
+`Keyword substitution\(aq in the CVS manual.
 .SP
 .IP "" 0
 \fB-l\fR
@@ -2734,7 +2734,7 @@ Export directories recursively.  This is on by default.
 .IP "" 2
 Export the revision specified by \fItag\fR or, when \fIdate\fR is specified
 and \fItag\fR is a branch tag, the version from the branch \fItag\fR as it
-existed on \fIdate\fR.  See see node `Common options\(aq in the CVS manual.
+existed on \fIdate\fR.  See `Common options\(aq in the CVS manual.
 .SP
 In addition, these options (that are common to
 \fBcheckout\fR and \fBexport\fR) are also supported:
@@ -3068,7 +3068,7 @@ There are the following additional special options.
 .IP "" 0
 \fB-b \fIbranch\fB\fR
 .IP "" 2
-See see node `Multiple vendor branches\(aq in the CVS manual.
+See `Multiple vendor branches\(aq in the CVS manual.
 .SP
 .IP "" 0
 \fB-k \fIsubst\fB\fR
@@ -3076,7 +3076,7 @@ See see node `Multiple vendor branches\(aq in the CVS manual.
 Indicate the keyword expansion mode desired.  This
 setting will apply to all files created during the
 import, but not to any files that previously existed in
-the repository.  See see node `Substitution modes\(aq in the CVS manual, for a
+the repository.  See `Substitution modes\(aq in the CVS manual, for a
 list of valid \fB-k\fR settings.
 .SP
 .IP "" 0
@@ -3160,7 +3160,7 @@ see node `modules\(aq in the CVS manual.)
 .SP
 .SH "import examples"
 .SP
-See see node `Tracking sources\(aq in the CVS manual, and see node `From files\(aq in the CVS manual.
+See `Tracking sources\(aq in the CVS manual, and `From files\(aq in the CVS manual.
 .SP
 .SH "log & rlog"
 .SS "Print out log information for files"
@@ -3365,7 +3365,7 @@ Print information about revisions whose state
 attributes match one of the states given in the
 comma-separated list \fIstates\fR.  Individual states may
 be any text string, though \fBcvs\fR commonly only uses two
-states, \fBExp\fR and \fBdead\fR.  See see node `admin options\(aq in the CVS manual
+states, \fBExp\fR and \fBdead\fR.  See `admin options\(aq in the CVS manual
 for more information.
 .SP
 .IP "" 0
@@ -3476,7 +3476,7 @@ List recursively.
 .IP "" 2
 Show files specified by \fItag\fR or, when \fIdate\fR is specified
 and \fItag\fR is a branch tag, the version from the branch \fItag\fR as it
-existed on \fIdate\fR.  See see node `Common options\(aq in the CVS manual.
+existed on \fIdate\fR.  See `Common options\(aq in the CVS manual.
 .SP
 .IP "" 0
 \fB-D \fIdate\fB\fR
@@ -3582,7 +3582,7 @@ recent revision (instead of ignoring the file).
 \fB-k \fIkflag\fB\fR
 .IP "" 2
 Process keywords according to \fIkflag\fR.  See
-see node `Keyword substitution\(aq in the CVS manual.
+`Keyword substitution\(aq in the CVS manual.
 .SP
 .IP "" 0
 \fB-l\fR
@@ -3599,7 +3599,7 @@ Examine directories recursively.  This option is on by default.
 .IP "" 2
 Use the revision specified by \fItag\fR, or when \fIdate\fR is specified
 and \fItag\fR is a branch tag, the version from the branch \fItag\fR as it
-existed on \fIdate\fR.  See see node `Common options\(aq in the CVS manual.
+existed on \fIdate\fR.  See `Common options\(aq in the CVS manual.
 .SP
 In addition to the above, these options are available:
 .SP
@@ -3856,7 +3856,7 @@ Sign all files recursively (default).  see node `Recursive behavior\(aq in the C
 Sign the revisions specified by \fItag\fR or, when \fIdate\fR is specified
 and \fItag\fR is a branch tag, the version from the branch \fItag\fR as it
 existed on \fIdate\fR.  With \fB-d\fR, delete keys from the specified
-revision.  See also, see node `Common options\(aq in the CVS manual.
+revision.  See also, `Common options\(aq in the CVS manual.
 .SP
 This special option is also available with \fBsign\fR.
 .SP
@@ -4046,7 +4046,7 @@ them):
 .IP "" 2
 Use the most recent revision no later than \fIdate\fR.
 This option is sticky, and implies \fB-P\fR.
-See see node `Sticky tags\(aq in the CVS manual, for more information on sticky tags/dates.
+See `Sticky tags\(aq in the CVS manual, for more information on sticky tags/dates.
 .SP
 .IP "" 0
 \fB-f\fR
@@ -4058,11 +4058,11 @@ is found, retrieve the most recent revision (instead of ignoring the file).
 \fB-k \fIkflag\fB\fR
 .IP "" 2
 Process keywords according to \fIkflag\fR.  See
-see node `Keyword substitution\(aq in the CVS manual.
+`Keyword substitution\(aq in the CVS manual.
 This option is sticky; future updates of
 this file in this working directory will use the same
 \fIkflag\fR.  The \fBstatus\fR command can be viewed
-to see the sticky options.  See see node `Invoking CVS\(aq in the CVS manual, for
+to see the sticky options.  See `Invoking CVS\(aq in the CVS manual, for
 more information on the \fBstatus\fR command.
 .SP
 .IP "" 0
@@ -4073,7 +4073,7 @@ Local; run only in current working directory.  see node `Recursive behavior\(aq 
 .IP "" 0
 \fB-P\fR
 .IP "" 2
-Prune empty directories.  See see node `Moving directories\(aq in the CVS manual.
+Prune empty directories.  See `Moving directories\(aq in the CVS manual.
 .SP
 .IP "" 0
 \fB-p\fR
@@ -4092,8 +4092,8 @@ behavior\(aq in the CVS manual.
 Retrieve the revisions specified by \fItag\fR or, when \fIdate\fR is specified
 and \fItag\fR is a branch tag, the version from the branch \fItag\fR as it
 existed on \fIdate\fR.  This option is sticky, and implies \fB-P\fR.
-See see node `Sticky tags\(aq in the CVS manual, for more information on sticky tags/dates. Also
-see see node `Common options\(aq in the CVS manual.
+See `Sticky tags\(aq in the CVS manual, for more information on sticky tags/dates. Also
+see `Common options\(aq in the CVS manual.
 .SP
 These special options are also available with
 \fBupdate\fR.
@@ -4103,7 +4103,7 @@ These special options are also available with
 .IP "" 2
 Reset any sticky tags, dates, or \fB-k\fR options.
 Does not reset sticky \fB-k\fR options on modified files.
-See see node `Sticky tags\(aq in the CVS manual, for more information on sticky tags/dates.
+See `Sticky tags\(aq in the CVS manual, for more information on sticky tags/dates.
 .SP
 .IP "" 0
 \fB-C\fR
@@ -4243,7 +4243,7 @@ is also in your working directory, with the name
 \fB.#\fIfile\fB.\fIrevision\fB\fR where \fIrevision\fR
 is the revision that your modified file started
 from.  Resolve the conflict as described in
-see node `Conflicts example\(aq in the CVS manual.
+`Conflicts example\(aq in the CVS manual.
 (Note that some systems automatically purge
 files that begin with \fB.#\fR if they have not been
 accessed for a few days.  If you intend to keep a copy
@@ -4295,14 +4295,14 @@ Sign all files recursively (default).  see node `Recursive behavior\(aq in the C
 .IP "" 2
 Verify the revisions specified by \fItag\fR or, when \fIdate\fR is specified
 and \fItag\fR is a branch tag, the version from the branch \fItag\fR as it
-existed on \fIdate\fR.  See also, see node `Common options\(aq in the CVS manual.
+existed on \fIdate\fR.  See also, `Common options\(aq in the CVS manual.
 .SP
 .SH "version"
 .SS "--Print client and server version strings"
 .IX "version (subcommand)"
 .SP
 \fBversion\fR outputs a version string for both the \fBcvs\fR client and
-a \fBcvs\fR server, when a server can be contacted.  Also, see node `Global options\(aq in the CVS manual.
+a \fBcvs\fR server, when a server can be contacted.  Also, `Global options\(aq in the CVS manual.
 .SH "AUTHORS"
 .TP
 Dick Grune
