@@ -1,4 +1,4 @@
-@set UPDATED 15 August 2006
+@set UPDATED 14 August 2006
 @set UPDATED-MONTH August 2006
 @set EDITION 1.12.13.1
 @set VERSION 1.12.13.1
